--- a/SiriusMudanças/inicios.css
+++ b/SiriusMudanças/inicios.css
@@ -1,5 +1,14 @@
 @import url(parent.css);
 
+@keyframes cont_show1 {
+    0% {
+        opacity: 0;
+    }
+    100%{
+        opacity: 1;
+    }
+}
+
 .main-title{
     display: grid;
     place-content: center;
@@ -27,6 +36,7 @@
 }
 
 .bg h1{
+    animation: 1500ms ease-out 0s 1 cont_show1;
     font-size: 5rem;
     color: rgb(220, 253, 255);
     padding-bottom: 10px;
