--- a/SiriusMudanças/posts.css
+++ b/SiriusMudanças/posts.css
@@ -1,92 +1,59 @@
-/*Escopo principal*/
+@import url(parent.css);
 
-body{
-margin: auto;
-background-color: #202124;
-font-family: Arial, sans-serif; 
-color:#f2f2f2 
-}
-
-
-/*Barra de navegação*/
-.nav_bar{
-    border: white; min-width: min-content; min-height: min-content;
-    display: grid;
+*{
     margin: 0;
-    height: 5 rem;
-    background: #101010;
+    padding: 0;
 }
 
-.nav_bar a{
-    float: left;
-    color: #f2f2f2;
+.main{
+    margin-left: auto;
+    margin-right: auto;
+    padding-top: 1.5em;
+    padding-right: 1.5em;
+    padding-left: 1.5em; 
+    margin: 0;
+}
+
+h2{
+    font-size: 3rem;
+    margin-top: 10px;
     text-align: center;
-    padding: 14px 14px;
-    text-decoration: none;
-    font-size: 17px;
+    margin-bottom: 50px;
 }
 
-.nav_bar a:hover{
-    background-color: aquamarine;
-    color: #101010;
-}
-
-/*Contéudo*/
-.conteudo{
-    margin: 1rem;
-
-}
-
-/*Posts config*/
-
-.image-grid{
-    --gap: 16px;
-    --num-cols: 4;
-    --row-height: 300px;
-
-    box-sizing: border-box;
-    padding: var(--gap);
-
+.grid{
     display: grid;
-    grid-template-columns: repeat(var(--num-cols), 1fr);
-    grid-auto-rows: var(--row-height);
-    gap: var(--gap);
+    width: 80vw;
+    grid-template-columns: auto auto auto;
 }
 
-.image-grid > img{
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
+.post{
+    padding: 1em;
+    background-color: rgb(225, 230, 235);
+    margin-bottom: 30px;
+    display: inline-block;
+    vertical-align: top;
+    border-radius: 30px;
+    max-width: 350px;
 }
 
-.image-grid-col-2{
-    grid-column: span 2;
+.post img{
+    border-radius: 20px;
 }
 
-.image-grid-row-2{
-    grid-row: span 2;
+.post p{
+    line-height: 1.4;
+
 }
 
-@media screen and (max-width: 1024px){
-    .image-grid{
-        --num-cols: 2;
-        --row-height: 200px;
+.post a{
+    text-decoration: none;
+    color:rgb(27, 28, 97);
+    font-weight: 600;
+}
+
+@media screen and (max-width: 1450px){
+    .grid{
+        column-count: 2;
     }
-}
-
-/*Post-text*/
-
-.container {
-    position: relative;
-    text-align: center;
-    color: white;
-    width: 10rem;
-    height: 10rem;
-    font-size: 12px;
-  }
-
-.text{
-    position: absolute;
-    bottom: 8px;
-    left: 14px;
 }
