--- a/SiriusMudanças/posts.css
+++ b/SiriusMudanças/posts.css
@@ -8,23 +8,56 @@
 .main{
     margin-left: auto;
     margin-right: auto;
-    padding-top: 1.5em;
-    padding-right: 1.5em;
-    padding-left: 1.5em; 
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+}
+
+.header{
+    background-color: rgb(226, 226, 226);
     margin: 0;
 }
 
-h2{
+.header h2{
+    padding: 30px;
+    margin: 0;
     font-size: 3rem;
-    margin-top: 10px;
     text-align: center;
-    margin-bottom: 50px;
 }
 
+.search{
+    padding-top: 40px;
+    align-self: center;
+}
+
+.search input[type=text]{
+    border: 0;
+    height: 35px;
+    width: 25em;
+    background-color: rgb(26, 45, 80);
+    color: aliceblue;
+    text-align: center;
+    border-radius: 20px;
+}
+
+.search input:focus{
+    background-color: rgb(42, 63, 104);
+}
+
+::placeholder{
+    text-align: center;
+    color: rgb(195, 191, 211);
+}
+
+
 .grid{
-    display: grid;
-    width: 80vw;
-    grid-template-columns: auto auto auto;
+    margin-top: 50px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    column-gap: 50px;
+    margin-left: 50px;
+    margin-right: 50px;
 }
 
 .post{
@@ -34,7 +67,7 @@ h2{
     display: inline-block;
     vertical-align: top;
     border-radius: 30px;
-    max-width: 350px;
+    max-width: 300px;
 }
 
 .post img{
@@ -43,7 +76,7 @@ h2{
 
 .post p{
     line-height: 1.4;
-
+    font-size: 1.1rem;
 }
 
 .post a{
