--- a/SiriusMudanças/parent.css
+++ b/SiriusMudanças/parent.css
@@ -31,6 +31,9 @@ body{
 .nav_item a{
     text-decoration: none;
     color: rgb(220, 253, 255);
+    height: 100%;
+    display: flex;
+    align-items: center;
 }
 
 .nav_item:hover{
