--- a/SiriusMudanças/inicios.css
+++ b/SiriusMudanças/inicios.css
@@ -21,7 +21,7 @@
 }
 
 .bg{
-    background-image: url("./imgs/hbackground.jpg");
+    background-image: url("./imgs/bg3.jpg");
 
     height: 80vh; 
 
