--- a/SiriusMudanças/parent.css
+++ b/SiriusMudanças/parent.css
@@ -17,15 +17,19 @@ body{
     border-bottom: solid white 1px;
 }
 
+.nav_left{
+    display: flex;
+    align-items: center;
+    
+}
+
 .nav_item {
     float: left;
     text-align: center;
     padding: 14px;
     font-size: 1rem;
-    transition: 0.3s;
-    height: 100%;
-    display: flex;
-    align-items: center;
+    transition: 0.3s;  
+    height: 4rem;  
 }
 
 .nav_item a{
@@ -52,4 +56,8 @@ body{
     font-size: 1rem;
     transition: 0.3s;
     background-color: #10101000;
+}
+
+.nav_bar:last-child{
+    margin-right: auto;
 }
